fixes & test